[gd_scene load_steps=3 format=3 uid="uid://cuc11c1e5by6j"]

[ext_resource type="Texture2D" uid="uid://bd1ovwcnltax3" path="res://Data/Textures/Logo/Logo.png" id="1_rdorl"]
[ext_resource type="Script" path="res://Source/MainMenu/MainMenu.gd" id="1_twv3b"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_twv3b")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.631373, 0.4, 0, 1)

[node name="StartB" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 776.0
offset_top = 388.0
offset_right = 1176.0
offset_bottom = 538.0
grow_horizontal = 2
grow_vertical = 2
text = "START"

[node name="ExitB" type="Button" parent="."]
layout_mode = 1
offset_left = 776.0
offset_top = 538.0
offset_right = 1176.0
offset_bottom = 688.0
text = "EXIT"

[node name="SplashScreen" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.96, 0.54)
texture = ExtResource("1_rdorl")
centered = false

[connection signal="timeout" from="Timer" to="." method="onTimerTimeout"]
[connection signal="pressed" from="StartB" to="." method="onStartBPressed"]
[connection signal="pressed" from="ExitB" to="." method="onExitBPressed"]
